--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <h1>Example H1</h1>
+
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt libero assumenda ullam mollitia dolore doloribus dignissimos? Laboriosam repellat est, error, architecto beatae, tenetur quidem ut similique iusto nulla facere quisquam.</p>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ullam reiciendis possimus. Ut corporis perspiciatis vitae dignissimos ea ad! Et alias quia eum fugiat incidunt. Enim numquam iure id nihil.</p>
